force-app/main/default/objects/HM_Child__mdt/HM_Child__mdt.object-meta.xml
<CustomObject>
    <label>HM_Child</label>
    <pluralLabel>HM_Children</pluralLabel>
</CustomObject>