force-app/main/default/objects/HM_Child__mdt/fields/Filter_Field3__c.field-meta.xml
<CustomField>
    <fullName>Filter_Field3__c</fullName>
    <label>Filter Field3</label>
    <metadataRelationshipControllingField>HM_Child__mdt.Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>HM_Children2</relationshipLabel>
    <relationshipName>HM_Children2</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>