force-app/main/default/objects/HM_Child__mdt/fields/Filter_Field__c.field-meta.xml
<CustomField>
    <fullName>Filter_Field__c</fullName>
    <label>Filter Field</label>
    <metadataRelationshipControllingField>HM_Child__mdt.Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>HM_Children</relationshipLabel>
    <relationshipName>HM_Children</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>