force-app/main/default/objects/HM_Child__mdt/fields/Filter_Field_Value2__c.field-meta.xml
<CustomField>
    <fullName>Filter_Field_Value2__c</fullName>
    <label>Filter Field Value2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>