force-app/main/default/objects/HM_Child__mdt/fields/Max_Age__c.field-meta.xml
<CustomField>
    <fullName>Max_Age__c</fullName>
    <label>Max Age (Days)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>