force-app/main/default/objects/HM_Child__mdt/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <label>Message</label>
    <length>120</length>
    <type>Text</type>
</CustomField>