force-app/main/default/objects/HM_Child__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>HM_Children</relationshipLabel>
    <relationshipName>HM_Children</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>