force-app/main/default/objects/HM_Child__mdt/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <label>Score</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>