force-app/main/default/objects/HM_Child__mdt/fields/Score_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Score_Threshold__c</fullName>
    <label>Score Threshold</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>