force-app/main/default/objects/HM_Child__mdt/listViews/Better_All.listView-meta.xml
<ListView>
    <fullName>Better_All</fullName>
    <columns>MasterLabel</columns>
    <columns>Object__c</columns>
    <columns>Filter_Field__c</columns>
    <columns>Filter_Field_Value__c</columns>
    <columns>Filter_Field2__c</columns>
    <columns>Filter_Field_Value2__c</columns>
    <columns>Filter_Field3__c</columns>
    <columns>Filter_Field_Value3__c</columns>
    <columns>Max_Age__c</columns>
    <columns>Score_Threshold__c</columns>
    <columns>Score__c</columns>
    <columns>Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>Better All</label>
    <language>en_US</language>
</ListView>